<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_time"
            style="@style/TextStyle.Body.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/time_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_time">

            <com.google.android.material.chip.Chip
                android:id="@+id/fast_food_chip"
                style="@style/chipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fast_food" />

            <com.google.android.material.chip.Chip
                android:id="@+id/time_range_30_to_45"
                style="@style/chipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_30_45_min" />

            <com.google.android.material.chip.Chip
                android:id="@+id/time_range_45_to_60"
                style="@style/chipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_45_60_min" />

            <com.google.android.material.chip.Chip
                android:id="@+id/time_more_than_60"
                style="@style/chipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more_than_hour" />
        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/tv_ingredients"
            style="@style/TextStyle.Body.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/ingredients"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/time_group" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/ingredients_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_ingredients">

            <com.google.android.material.chip.Chip
                android:id="@+id/ingredient_green_chillies"
                style="@style/chipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/green_chillies" />

            <com.google.android.material.chip.Chip
                android:id="@+id/ingredient_ginger"
                style="@style/chipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ginger" />

            <com.google.android.material.chip.Chip
                android:id="@+id/ingredient_onion"
                style="@style/chipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onion" />

            <com.google.android.material.chip.Chip
                android:id="@+id/ingredient_coriander_powder"
                style="@style/chipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coriander_powder" />

            <com.google.android.material.chip.Chip
                android:id="@+id/ingredient_eggs"
                style="@style/chipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eggs" />

            <com.google.android.material.chip.Chip
                android:id="@+id/ingredient_cloves"
                style="@style/chipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cloves_laung" />

            <com.google.android.material.chip.Chip
                android:id="@+id/ingredient_red_chill_powder"
                style="@style/chipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red_chill_powder" />

            <com.google.android.material.chip.Chip
                android:id="@+id/ingredient_amchurr"
                style="@style/chipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amchur" />

            <com.google.android.material.chip.Chip
                android:id="@+id/ingredient_karela"
                style="@style/chipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/karela" />

            <com.google.android.material.chip.Chip
                android:id="@+id/ingredient_salt"
                style="@style/chipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salt" />
        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_apply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/apply"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/radius_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ingredients_group" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_clear"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/clear"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/radius_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_apply"
            app:strokeColor="@color/primary" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>