<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chips_filter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/spacing_medium"
        app:checkedChip="@+id/chip_all_recipes"
        app:chipSpacingHorizontal="@dimen/spacing_small"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_all_recipes"
            style="@style/chipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_recipes" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_breakfast"
            style="@style/chipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/breakfast" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_dessert"
            style="@style/chipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dessert" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_snack"
            style="@style/chipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snack"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_dinner"
            style="@style/chipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dinner" />

    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>